# trigger_log_queue_compare

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  analyze_bench.py  compile.py  main.cpp  readme.md  threadbase.cpp
bak/: 简单的风控流水模拟.md
cms/: RiskTriggerLogThread.cpp  RiskTriggerLogThread.h
docs/: bench1.txt  queue_benchmark_report.md
include/: BenchmarkRunner.h  EpochBarrier.h  OrderStruct.h  RiskDefine.h  RiskServerIndex.h  RiskServerUtil.h  RiskSettingStruct.h  RiskTriggerLogData.h  SecurityInfo.h  SystemContext.h  lockfree_queue.h  lockfree_queue_no_block.h  threadbase.h
proto/: component.proto  field.proto  risk_log.proto  risk_settings.proto  trade_event.proto
src/: EpochBarrier.cpp
